Fixed responsiveness of chatbot icon on mobile, iphone and desktop(PS: just tell me which screen sizes don't work.. I tried but I can't get 'em all. Chrome devtools wasn't matching what I saw on my phone, which caused me a bit of trouble. Thanks!

--- a/client/src/components/ChatbotHelp.css
+++ b/client/src/components/ChatbotHelp.css
@@ -192,14 +192,15 @@
     }
   }
 
-  @media (min-width:350px){
+  /* above 380px we translate it by 85px. Removed media queries entirely*/
+  @media (min-width: 401px){
+    
     .chatbotHelpContainer svg:nth-of-type(1){
       transform: translate(175px, 0);
     }
   }
 
-  @media (min-width:375px){
-    
+  @media screen and (min-width: 700px){
     .chatbotHelpContainer svg:nth-of-type(1){
       transform: translate(175px, 85px);
     }
